[gd_scene load_steps=4 format=3 uid="uid://6g8qe4god3w6"]

[ext_resource type="Script" uid="uid://dxpsrauv0hwfq" path="res://Scripts/Consumables/lice_orb/lice_bug.gd" id="1_77ys8"]
[ext_resource type="Texture2D" uid="uid://dvthe5p61b0xr" path="res://Textures/louse.png" id="2_jnr8d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77ys8"]

[node name="lice_bug" type="Area2D"]
script = ExtResource("1_77ys8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_77ys8")

[node name="Retarget" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("2_jnr8d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Retarget" to="." method="_on_retarget_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
